--- a/Gitpilot/Components/SvgGraphPart/SvgFillGuider.razor
+++ b/Gitpilot/Components/SvgGraphPart/SvgFillGuider.razor
@@ -1,5 +1,5 @@
-﻿<circle cx="@_positionX" cy="13" r="10" fill="@RgbColor"></circle>
-<line x1="@_positionX" x2="@_positionX" y1="13" y2="26" stroke="@RgbColor" stroke-width="2"></line>
+﻿
+<rect x="@_positionX" y="2" width="100%" height="22" fill="@RgbColor" style="opacity: 0.2"/>
 
 @code {
     [Parameter]
