--- a/Gitpilot/Components/Layout/GitpilotLayout.razor.css
+++ b/Gitpilot/Components/Layout/GitpilotLayout.razor.css
@@ -47,6 +47,7 @@
     background-color: var(--background-color);
     padding-top: 50px;
     padding-left: 400px;
+    display:block;
 }
 .plus-button{
     font-size:24px;
