--- a/Gitpilot/Components/GitGraph.razor
+++ b/Gitpilot/Components/GitGraph.razor
@@ -105,8 +105,10 @@
             {
                 await Task.Delay(TimeSpan.FromSeconds(0.5));
             }
-            GitRepository.Commits = gitRepositoryService.GetCommits(GitRepository.LibGitRepository);
+
+            GitRepository.Commits = gitRepositoryService.GetCommits(GitRepository.LibGitRepository, DateTime.Now.AddDays(-30), DateTime.Now);
             await this.InvokeAsync(this.StateHasChanged);
+        
         }
     }
 
