--- a/Gitpilot/Components/GitStatus.razor
+++ b/Gitpilot/Components/GitStatus.razor
@@ -19,6 +19,8 @@
         <button>Pop     </button>
         <button class="plus-button" @onclick="TuggleCustomDialogVisibility">+</button>
     </div>
+
+    <UserProfile />
 </div>
 
 
