--- a/Gitpilot/Components/Layout/GitpilotLayout.razor
+++ b/Gitpilot/Components/Layout/GitpilotLayout.razor
@@ -29,7 +29,7 @@
     <div class="quick-access-bar">
         <div class="app-name-cotainer">
             <img src="GitpilotIcon.png" alt="Icon" />
-            <div class="gitpiot-name">Gitpilot</div>
+            <div class="gitpiot-name">GitPilot</div>
         </div>
         <div class="git-status-container">
             <GitStatus 
