enhanc add profile

--- a/Gitpilot/Components/Common/CustomDropdownList.razor
+++ b/Gitpilot/Components/Common/CustomDropdownList.razor
@@ -25,5 +25,6 @@
         SelectedOption = option;
         IsShowDropdownList = false;
         await OnOptionSelected.InvokeAsync(option);
+        StateHasChanged();
     }
 }
