--- a/Gitpilot/Components/Common/CustomButton.razor
+++ b/Gitpilot/Components/Common/CustomButton.razor
@@ -1,8 +1,16 @@
-﻿<button class="button">
+﻿@using Gitpilot.Enums.ViewEnum
+<button @onclick="Click" class="@($"{ButtonType.ToString()} {CustomClass}")">
     @ChildContent
 </button>
 
 @code {
-
+    [Parameter] public string CustomClass { get; set; } = "";
     [Parameter] public RenderFragment ChildContent { get; set; }
+    [Parameter] public ButtonTypeEnum ButtonType { get; set; } = ButtonTypeEnum.Normal;
+    [Parameter] public EventCallback OnClick { get; set; }
+
+    private async Task Click()
+    {
+        await OnClick.InvokeAsync();
+    }
 }
