--- a/Gitpilot/Components/Common/CustomButton.razor.css
+++ b/Gitpilot/Components/Common/CustomButton.razor.css
@@ -1,4 +1,4 @@
-﻿.button {
+﻿.Normal {
     background-color: var(--secondary-color);
     color: white;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -11,6 +11,24 @@
     cursor: pointer;
     border-radius: 5px;
 }
-    .button:hover {
+    .Normal:hover {
         background-color: var(--secondary-color-hover);
+    }
+
+.Positive {
+    background-color: rgb(58,80,68);
+    color: white;
+    border: 1px solid rgba(92, 184, 92, 0.1);
+    padding: 7px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+    .Positive:hover {
+        background-color: rgba(92, 184, 92, 0.1);
     }
