--- a/Gitpilot/Components/LoadingOra.razor
+++ b/Gitpilot/Components/LoadingOra.razor
@@ -50,11 +50,24 @@
     private void TakeLoadingInfoIfHave()
     {
         if (!onloadingQueue.IsEmpty())
-            _loadings.Add(onloadingQueue.Dequeue());
+        {
+            var dequeuedLoading = onloadingQueue.Dequeue();
+            if (dequeuedLoading != null)
+            {
+                _loadings.Add(new LoadingInfo()
+                    {
+                        CreatedTime = dequeuedLoading.CreatedTime,
+                        IsShouldBlock = dequeuedLoading.IsShouldBlock,
+                        LoadingHash = dequeuedLoading.LoadingHash,
+                        Message = dequeuedLoading.Message,
+                    });
+            }
+        }
     }
 
     private void CheckIfLoadingHaveCloseSignle()
     {
+        _loadings.RemoveAll(l => l == null);
         var loadingHashesNeedToClose = new List<string>(_loadings.GroupBy(l => l.LoadingHash).Where(g => g.Count() > 1).Select(g => g.Key));
         _loadings.RemoveAll(l => loadingHashesNeedToClose.Contains(l.LoadingHash));
     }
